@@ -15,6 +15,8 @@ version 1.0pre4
 - enhanced support for Wooldridge data files
 - add "-t" flag to print command: print variables to ten
   significant digits
+- improve saving of scalar variables, and documentation of same
+- updates to full manual
 
 10/10/02 version 1.0pre3
 - improve accuracy of calculation of standard errors, and
